test/fail/parse_match_multi_pattern_missing_comma.ms
match value {
case A, B => "A or B"
case C => "C"
};
